# azure-iot-sdk-c-EVM

Advantech/SensorSources/: SensorSources.cpp  SensorSources.h  SensorSources.vcxproj  SensorSources.vcxproj.filters
EVM/: AnCAD_impl.c  AnCAD_impl.h  CMakeLists.txt  DeviceInfoHandler.cpp  DeviceInfoHandler.h  Readme.md  SensorCallback.cpp  SensorCallback.h  main.c  pnp_device.c  pnp_device.h
EVM/DCM/: urn_Advantech_EVM_1.capabilitymodel.json  urn_Advantech_EVM_DeviceDetailedInformation_1.interface.json  urn_Advantech_EVM_SensorsInformation_1.interface.json  urn_azureiot_DeviceManagement_DeviceInformation_1.interface.json
EVM/utilities/: devicedetailedinformation_interface.c  devicedetailedinformation_interface.h  deviceinfo_interface.c  deviceinfo_interface.h  digitaltwin_client_helper.c  digitaltwin_client_helper.h  digitaltwin_serializer.c  digitaltwin_serializer.h  sensorsinformation_interface.c  sensorsinformation_interface.h
cs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  azure_iot_sdks.sln  cmake_install.cmake  parson.vcxproj  parson.vcxproj.filters
cs/UTX_3117-CS/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  (+3 more)
(+226 files in other folders)
